<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ApkProtector</string>
    <string name="select_apk">Select APK</string>
    <string name="apk_path_to_recompile">Apk Path to Recompile</string>
    <string name="browse">Browse</string>
    <string name="projects">Project\'s</string>
    <string name="create_keystore">Create Keystore</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <string name="version">Version&#160;</string>
    <string name="this_package_has_already_been_obfuscated_title">This Package has already been obfuscated</string>
    <string name="this_application_has_already_been_obfuscated_message">This application has already been obfuscated once and the output app exists on your sdcard. What would you like to do?</string>
    <string name="cancel">Cancel</string>

    <string name="protected_apps">Protected App\'s</string>
    <string name="file_not_found">ّFile not found!</string>

    <string name="do_you_want_to_minimize_or_exit_message">Do you want to minimize or exit?</string>
    <string name="minimize">Minimize</string>

    <string name="obfuscate_complete">Obfuscate Complete!</string>
    <string name="obfuscate_fail">Obfuscate Fail!</string>
    <string name="show">Show</string>
    <string name="apk_is_already_protected">APK is already protected!</string>

    <string name="choose_method_title">Choose Method</string>
    <string name="pick_from_sdcard">Pick from sdcard</string>
    <string name="pick_from_installed">Pick from installed</string>
    <string name="read_carefully_title">Read carefully</string>
    <string name="warning_message">This will convert your app to a secure cloned app  WARNING: The cloned app may crash, show errors or work incorrectly. *Some app can\'t be obfuscate.</string>
    <string name="invalid_apk_file">Invalid Apk File!</string>
    <string name="invalid_file">Invalid File!</string>
    <string name="save">Save</string>

    <string name="alias">Alias</string>
    <string name="password">Password</string>
    <string name="commom_name">Common Name</string>
    <string name="organization">Organization</string>
    <string name="organization_unit">Organization Unit</string>
    <string name="country">Country</string>
    <string name="locality">Locality</string>
    <string name="keystore_already_exist">Keystore Already Exist!</string>
    <string name="creating_keystore_complete">Creating Keystore Complete!</string>

    <string name="keystore_path">KeyStore Path</string>
    <string name="keystore_password">KeyStore Pass</string>
    <string name="select_keystore">Select KeyStore</string>
    <string name="custom_keystore">Custom KeyStore</string>
    <string name="choose">Choose</string>

    <string name="select">Select</string>
    <string name="error_vending">Error</string>
    <string name="vending_message">You have a non-licensed version of the program installed.\n\nTo use this program you must purchase a licensed version on Google Play.</string>
    <string name="create">Create</string>
    <string name="invalid_or_empty_info">Invalid or Empty Info</string>
    <string name="about_not_found_email">Not found email app</string>

    <string name="settings">Settings</string>
    <string name="warning">Warning</string>
    <string name="different_signature">The apk and the installed application\'s signature information is inconsistent, whether to uninstall the application first?</string>
    <string name="apk_deleted">\" deleted!\"</string>
    <string name="title_pref_apk_signing">APK signer</string>
    <string name="msg_pref_custom_keystore">Use a custom keystore file for signing APKs during build</string>
    <string name="title_pref_custom_keystore">Custom keystore</string>
    <string name="scoped_storage_title">Android 11 R changes</string>
    <string name="scoped_storage_msg">Android 11 introduce a new file-management way called \"Scoped Storage\". You need to grant a special permission!</string>
    <string name="protect_key_msg">Dexs custom encryption key</string>
    <string name="protect_key_title">Protect Key</string>
    <string name="about_msg1">ApkProtector is the protector and obfuscator for Android platforms. It helps you secure your applications and libraries against unauthorized or illegal use, reverse engineering, and cracking.</string>
    <string name="about_msg2"><![CDATA[<br><i>PS: The application from Google Play does not support Android 11 and higher! It is recommended to download the application from 4PDA or Telegram</i>]]></string>
    <string name="about_copyright"><![CDATA[<br>© Copyright 2019-2021 Тимашков Иван]]></string>
    <string name="dex_protect">Dex Protect</string>
    <string name="encrypt_resources">Encrypt Resources</string>
    <string name="sign_apk">Sign Apk</string>
    <string name="community">Community</string>

    <string name="pref_msg_zipaligner">Enable to optimize the app</string>
    <string name="pref_title_alignment">Alignment</string>
    <string name="pref_msg_alignment">Alignment (in bytes) for uncompressed entries</string>
    <string name="pref_msg_force">Overwrite output if it exists, fail otherwise.</string>
    <string name="pref_msg_zopfli">Recompress compressed entries with more efficient algorithm. Copy compressed entries as-is, and unaligned, otherwise</string>
    <string name="pref_msg_page_align_shared_libs">Align .so files to 4096 and other files to alignment, or all files to alignTo if false</string>
    <string name="pref_title_dex_opt">Dexer optimizations</string>
    <string name="pref_msg_dex_opt">Enable dexer optimizations. This will make the Apps run faster but cause longer build times</string>
    <string name="pref_title_ignore_classes">Ignore Classes</string>
    <string name="pref_msg_ignore_classes">Ignoring common open sourced libraries</string>
    <string name="pref_title_hide_apkprotector">Hide ApkProtector</string>
    <string name="pref_title_random_name">Randome name</string>
    <string name="pref_msg_random_name">Random name of encrypted dexs</string>
    <string name="pref_title_dex_folder_name">Dex folder name</string>
    <string name="pref_msg_dex_folder_name">The name of the folder in which the dexs are stored</string>
    <string name="pref_title_dex_suffix">Dex suffix</string>
    <string name="pref_msg_dex_suffix">Encrypted dex file extension</string>
    <string name="pref_title_application_name">Application name</string>
    <string name="pref_msg_application_name">Base class for maintaining global application state</string>
    <string name="pref_title_protect_manifest">Protect Manifest</string>
    <string name="pref_msg_protect_manifest">Protect manifest from repackaging</string>
    <string name="install">Install</string>
    <string name="delete">Delete</string>
    <string name="pref_title_type">Type</string>
    <string name="pref_msg_type">Select type hide apkprotector</string>
    <string name="pref_title_pkg">Package Name</string>
    <string name="pref_msg_pkg">Enter custom package name</string>
    <string name="pref_title_dexes_folder_names">Dexes Folder Name</string>
    <string name="pref_msg_dexes_folder_names">Enter custom folder dexes name in assets</string>
    <string name="pref_title_prefix_dexes">Prefix Dexes Name</string>
    <string name="pref_msg_prefix_dexes">Enter custom prefix dexes name</string>
    <string name="pref_title_suffix_dexes">Suffix Dexes Name</string>
    <string name="pref_msg_suffix_dexes">Enter custom suffix dexes name</string>
    <string name="pref_title_category_resources">Resources</string>
    <string name="pref_title_category_dexer">Dexer</string>
    <string name="pref_title_category_zipaligner">ZipAligner</string>
    <string name="licenses">Licenses</string>

</resources>
